fix: bugfix z-index header-page

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -27,7 +27,7 @@
 
 	}
 	&__content {
-		z-index: 10;
+		z-index: 2;
 	}
 
 	&__content p {
